Sidebar.css fix change position: absolute; to position: fixed; to fix viewport overflow on small screens

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -12,7 +12,7 @@ aside {
 
 @media (max-width: 90ch) {
     aside {
-        position: absolute;
+        position: fixed;
         transform: translateX(-100%);
     }
 }
